# delphi-intelligence

./: .gitignore  .mcp.json  .prettierignore  CLAUDE.md  DEVELOPMENT.md  QUICK_REFERENCE.md  README.md  TESTING_AUTH.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/api/: .dockerignore  .env.example  .pre-commit-config.yaml  AUTHENTICATION_GUIDE.md  DATABASE_TESTING_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DOCKER_SETUP.md  DOCUMENT_UPLOAD_IMPLEMENTATION.md  Dockerfile  LINTING.md  MIGRATION_AUTOMATION.md  README.md  TESTING_AND_LINTING.md  TESTING_STRATEGY.md  alembic.ini  package.json  pyproject.toml  run_tests.py  supabase_client.py  test_auth_setup.sh  test_document_upload.py  test_models_simple.py  test_supabase_client_unit.py  test_supabase_direct.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0420e85cda0d_add_member_role_enum.py  1b456c54a397_enable_pgvector_and_add_vector_index.py  1f375c83b052_add_timestamps_to_query_documents.py  20251007_204756_add_user_preferences_table.py  20251014_220000_align_document_model_with_code.py  20251017_000000_add_processing_error_field.py  20251020_add_confidence_score_field.py  20251022_add_icon_color_to_spaces.py  20251022_rename_role_to_member_role.py  20251023_add_timestamps_to_space_members.py  20251025_add_user_preferences_fields.py  20251025_align_all_schemas_with_models.py  20251025_remove_space_members_joined_at.py  3df48089188e_initial_schema.py  4a41cb0ab966_make_document_processed_at_timezone_.py  5b44e667b3ee_align_queries_table_with_model.py  dd3d9f33c4de_add_document_chunks_table_for_text_.py
apps/api/app/: __init__.py  config.py  main.py  supabase_client.py
apps/api/app/agents/: __init__.py  query_agent.py
apps/api/app/auth/: __init__.py  dependencies.py  jwt_handler.py  redis_client.py  schemas.py  service.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/graphql/: __init__.py  mutation.py  query.py  schema.py  types.py
apps/api/app/middleware/: auth.py
apps/api/app/models/: __init__.py  base.py  document.py  document_chunk.py  query.py  query_document.py  space.py  user.py  user_preferences.py
apps/api/app/routes/: auth.py  documents.py  health.py  query_stream.py
apps/api/app/services/: ai_agent.py  chunking_service.py  citation_service.py  document_processor.py  embedding_service.py  langchain_config.py  permissions.py  sse_manager.py  storage_service.py  vector_search_service.py
apps/api/app/services/extractors/: __init__.py  base.py  docx_extractor.py  (+2 more)
apps/api/app/utils/: filename.py  slug.py
apps/api/database/: QUICKSTART_RLS_FIX.md  RLS_SECURITY_FIXES.md  STORAGE_BUCKET_SETUP.md  SUPABASE_SETUP.md  rls_policies.sql  schema.sql
apps/api/docs/: LOG-158-IMPLEMENTATION-SUMMARY.md  MIGRATION_TEST_RESULTS.md  SCHEMA_AUDIT.md
apps/api/scripts/: db_util.py  migrate.py  migrate.sh  start_dev.sh
apps/api/tests/: conftest.py  test_ai_agent.py  test_auth_jwt.py  test_auth_redis.py  test_auth_routes.py  test_chunking_service.py  test_document_pipeline_integration.py  test_embedding_service.py  test_extractors.py  test_graphql_spaces.py  test_main.py  test_models_postgres.py  test_storage_service.py  test_vector_search_integration.py  test_vector_search_service.py
(+227 files in other folders)
