[tool.poetry]
name = "olympus-api"
version = "0.1.0"
description = "FastAPI backend for Olympus MVP"
authors = ["Olympus Team <team@olympus.dev>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.7"

# Supabase
supabase = "^2.0.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.30.0"
alembic = "^1.13.1"

# Auth & Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-decouple = "^3.8"

# GraphQL
strawberry-graphql = {extras = ["fastapi"], version = "^0.240.0"}

# Redis for session management
redis = "^4.6.0"

# Utilities
pydantic = ">=2.0,<2.10"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.0"
httpx = "^0.24.0"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.4.4"
mypy = "^1.5.0"
pre-commit = "^3.4.0"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]